--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,7 +10,7 @@ env:
   PROJECT_ID: ${{ secrets.GCP_PROJECT_ID }}
   BACKEND_IMAGE: bookexchange-backend
   FRONTEND_IMAGE: bookexchange-frontend
-  REGION: us-central1
+  REGION: europe-west2
 
 jobs:
   test-backend:
@@ -55,7 +55,7 @@ jobs:
     - name: Run linting
       run: |
         cd backend
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics --exclude=venv
         black --check .
         isort --check-only .
     
@@ -112,7 +112,7 @@ jobs:
         npm run build
 
   build-and-deploy:
-    needs: [test-backend, test-frontend]
+    needs: [test-backend, test-frontend, terraform-apply]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
     
@@ -210,7 +210,10 @@ jobs:
         cd infra
         terraform plan \
           -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
-          -var="database_password=${{ secrets.DATABASE_PASSWORD }}"
+          -var="database_password=${{ secrets.DATABASE_PASSWORD }}" \
+          -var="project_name=bookexchange" \
+          -var="region=europe-west2" \
+          -var="zone=europe-west2-a"
 
   terraform-apply:
     runs-on: ubuntu-latest
@@ -241,4 +244,7 @@ jobs:
         cd infra
         terraform apply -auto-approve \
           -var="project_id=${{ secrets.GCP_PROJECT_ID }}" \
-          -var="database_password=${{ secrets.DATABASE_PASSWORD }}" 
+          -var="database_password=${{ secrets.DATABASE_PASSWORD }}" \
+          -var="project_name=bookexchange" \
+          -var="region=europe-west2" \
+          -var="zone=europe-west2-a" 
