--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,6 +11,7 @@ env:
   BACKEND_IMAGE: bookexchange-backend
   FRONTEND_IMAGE: bookexchange-frontend
   REGION: europe-west2
+  REPOSITORY: bookexchange-repo
 
 jobs:
   test-backend:
@@ -129,29 +130,31 @@ jobs:
       uses: google-github-actions/setup-gcloud@v2
     
     - name: Configure Docker to use gcloud as a credential helper
-      run: gcloud auth configure-docker
+      run: |
+        gcloud auth configure-docker
+        gcloud auth configure-docker $REGION-docker.pkg.dev
     
     - name: Build and push backend image
       run: |
         cd backend
-        docker build -t gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA .
-        docker push gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA
-        docker tag gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA gcr.io/$PROJECT_ID/$BACKEND_IMAGE:latest
-        docker push gcr.io/$PROJECT_ID/$BACKEND_IMAGE:latest
+        docker build -t $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$BACKEND_IMAGE:$GITHUB_SHA .
+        docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$BACKEND_IMAGE:$GITHUB_SHA
+        docker tag $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$BACKEND_IMAGE:$GITHUB_SHA $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$BACKEND_IMAGE:latest
+        docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$BACKEND_IMAGE:latest
     
     - name: Build and push frontend image
       run: |
         cd frontend
-        docker build -t gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA .
-        docker push gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA
-        docker tag gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:latest
-        docker push gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:latest
+        docker build -t $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$FRONTEND_IMAGE:$GITHUB_SHA .
+        docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$FRONTEND_IMAGE:$GITHUB_SHA
+        docker tag $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$FRONTEND_IMAGE:$GITHUB_SHA $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$FRONTEND_IMAGE:latest
+        docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$FRONTEND_IMAGE:latest
     
     - name: Deploy to Cloud Run
       run: |
         # Deploy backend
         gcloud run deploy bookexchange-backend \
-          --image gcr.io/$PROJECT_ID/$BACKEND_IMAGE:$GITHUB_SHA \
+          --image $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$BACKEND_IMAGE:$GITHUB_SHA \
           --region $REGION \
           --platform managed \
           --allow-unauthenticated \
@@ -160,7 +163,7 @@ jobs:
         # Deploy frontend
         BACKEND_URL=$(gcloud run services describe bookexchange-backend --region=$REGION --format="value(status.url)")
         gcloud run deploy bookexchange-frontend \
-          --image gcr.io/$PROJECT_ID/$FRONTEND_IMAGE:$GITHUB_SHA \
+          --image $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$FRONTEND_IMAGE:$GITHUB_SHA \
           --region $REGION \
           --platform managed \
           --allow-unauthenticated \
